--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,8 @@
         "lib/**/*.jar",
         "c:\\Users\\jenni\\OneDrive\\Desktop\\Betacraft-WP\\JLog.jar"
     ],
-    "java.configuration.updateBuildConfiguration": "automatic"
+    "java.configuration.updateBuildConfiguration": "automatic",
+    "cSpell.words": [
+        "betacraft"
+    ]
 }
