--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.jennielizz</groupId>
-	<artifactId>Betacraft</artifactId>
+	<artifactId>JLEngine</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>Betacraft</name>
+	<name>JLEngine</name>
 	<url>http://maven.apache.org</url>
 
 	<properties>
