--- a/imgui.ini
+++ b/imgui.ini
@@ -1,10 +1,117 @@
 [Window][Debug##Default]
-Pos=60,60
-Size=400,400
+Pos=766,142
+Size=400,387
 Collapsed=0
 
-[Window][Bruh]
-Pos=11,610
-Size=259,101
+[Window][Hierarchy]
+Pos=0,19
+Size=91,392
 Collapsed=0
+DockId=0x00000009,0
+
+[Window][Dear ImGui Demo]
+Pos=572,35
+Size=441,682
+Collapsed=1
+
+[Window][Example: Property editor]
+Pos=490,7
+Size=273,680
+Collapsed=0
+DockId=0x00000003,0
+
+[Window][DockSpace Demo]
+Size=1280,720
+Collapsed=0
+
+[Window][Example: Simple layout]
+Pos=60,60
+Size=500,440
+Collapsed=0
+
+[Window][Example: Custom rendering]
+Pos=344,267
+Size=485,414
+Collapsed=0
+
+[Window][Dear ImGui Style Editor]
+Pos=194,7
+Size=353,714
+Collapsed=0
+
+[Window][Example: Documents]
+Pos=60,60
+Size=621,714
+Collapsed=0
+
+[Window][DockSpaceViewport_11111111]
+Pos=0,19
+Size=1280,701
+Collapsed=0
+
+[Window][JLEngine]
+Size=197,720
+Collapsed=0
+DockId=0x00000001,0
+
+[Window][JL Editor]
+Pos=0,19
+Size=431,701
+Collapsed=0
+DockId=0x00000005,0
+
+[Window][Hierarchy s]
+Pos=60,60
+Size=476,344
+Collapsed=0
+
+[Window][Scene]
+Pos=93,19
+Size=1012,701
+Collapsed=0
+DockId=0x00000008,0
+
+[Window][BG]
+Pos=0,0
+Size=1280,720
+Collapsed=0
+
+[Window][Content Browser]
+Pos=1107,19
+Size=173,701
+Collapsed=0
+DockId=0x0000000C,0
+
+[Window][Properties]
+Pos=0,413
+Size=91,307
+Collapsed=0
+DockId=0x0000000A,0
+
+[Table][0xD0F0C6E3,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x1DF0EC7D,4]
+RefScale=13
+Column 0  Sort=0v
+Column 1 
+Column 2 
+Column 3 
+
+[Docking][Data]
+DockSpace           ID=0x3BC79352 Pos=0,38 Size=1280,682 Split=X
+  DockNode          ID=0x00000002 Parent=0x3BC79352 SizeRef=275,680 CentralNode=1 Selected=0xE927CF2F
+  DockNode          ID=0x00000003 Parent=0x3BC79352 SizeRef=273,680 Selected=0x593C5C9B
+DockSpace           ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1280,701 Split=X
+  DockNode          ID=0x0000000B Parent=0x8B93E3BD SizeRef=1105,701 Split=X
+    DockNode        ID=0x00000007 Parent=0x0000000B SizeRef=91,701 Split=X
+      DockNode      ID=0x00000005 Parent=0x00000007 SizeRef=431,701 Selected=0x66A52626
+      DockNode      ID=0x00000006 Parent=0x00000007 SizeRef=847,701 Split=X
+        DockNode    ID=0x00000001 Parent=0x00000006 SizeRef=197,720 Selected=0x0012A059
+        DockNode    ID=0x00000004 Parent=0x00000006 SizeRef=1081,720 Split=Y Selected=0x18B8C0DE
+          DockNode  ID=0x00000009 Parent=0x00000004 SizeRef=155,392 CentralNode=1 Selected=0x788BAA0D
+          DockNode  ID=0x0000000A Parent=0x00000004 SizeRef=155,307 Selected=0xC89E3217
+    DockNode        ID=0x00000008 Parent=0x0000000B SizeRef=1012,701 Selected=0x18B8C0DE
+  DockNode          ID=0x0000000C Parent=0x8B93E3BD SizeRef=173,701 Selected=0x371352B7
 
