--- a/imgui.ini
+++ b/imgui.ini
@@ -27,30 +27,31 @@ DockId=0x00000008,0
 
 [Window][Scene]
 Pos=122,19
-Size=778,701
+Size=735,701
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Content Browser]
-Pos=902,19
-Size=378,701
+Pos=859,19
+Size=421,701
 Collapsed=0
 DockId=0x00000002,0
 
-[Table][0x1DF0EC7D,5]
+[Table][0x1DF0EC7D,6]
 RefScale=13
 Column 0  Sort=0v
 Column 1 
 Column 2 
 Column 3 
 Column 4 
+Column 5 
 
 [Docking][Data]
 DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1280,701 Split=X
-  DockNode      ID=0x00000001 Parent=0x8B93E3BD SizeRef=900,1001 Split=X
+  DockNode      ID=0x00000001 Parent=0x8B93E3BD SizeRef=857,1001 Split=X
     DockNode    ID=0x00000005 Parent=0x00000001 SizeRef=120,701 Split=Y Selected=0xC89E3217
       DockNode  ID=0x00000007 Parent=0x00000005 SizeRef=381,440 Selected=0x788BAA0D
       DockNode  ID=0x00000008 Parent=0x00000005 SizeRef=381,259 Selected=0xC89E3217
-    DockNode    ID=0x00000006 Parent=0x00000001 SizeRef=778,701 CentralNode=1 Selected=0x18B8C0DE
-  DockNode      ID=0x00000002 Parent=0x8B93E3BD SizeRef=378,1001 Selected=0x371352B7
+    DockNode    ID=0x00000006 Parent=0x00000001 SizeRef=735,701 CentralNode=1 Selected=0x18B8C0DE
+  DockNode      ID=0x00000002 Parent=0x8B93E3BD SizeRef=421,1001 Selected=0x371352B7
 
