--- a/imgui.ini
+++ b/imgui.ini
@@ -15,29 +15,29 @@ Collapsed=0
 
 [Window][Hierarchy]
 Pos=0,19
-Size=141,440
+Size=182,440
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][Properties]
 Pos=0,461
-Size=141,259
+Size=182,259
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][Scene]
-Pos=143,19
-Size=678,701
+Pos=184,19
+Size=264,701
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Content Browser]
-Pos=823,19
-Size=457,701
+Pos=450,19
+Size=830,701
 Collapsed=0
 DockId=0x00000002,0
 
-[Table][0x1DF0EC7D,7]
+[Table][0x1DF0EC7D,12]
 RefScale=13
 Column 0  Sort=0v
 Column 1 
@@ -46,13 +46,18 @@ Column 3
 Column 4 
 Column 5 
 Column 6 
+Column 7 
+Column 8 
+Column 9 
+Column 10
+Column 11
 
 [Docking][Data]
 DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1280,701 Split=X
-  DockNode      ID=0x00000001 Parent=0x8B93E3BD SizeRef=821,1001 Split=X
-    DockNode    ID=0x00000005 Parent=0x00000001 SizeRef=141,701 Split=Y Selected=0xC89E3217
+  DockNode      ID=0x00000001 Parent=0x8B93E3BD SizeRef=448,1001 Split=X
+    DockNode    ID=0x00000005 Parent=0x00000001 SizeRef=182,701 Split=Y Selected=0xC89E3217
       DockNode  ID=0x00000007 Parent=0x00000005 SizeRef=381,440 Selected=0x788BAA0D
       DockNode  ID=0x00000008 Parent=0x00000005 SizeRef=381,259 Selected=0xC89E3217
-    DockNode    ID=0x00000006 Parent=0x00000001 SizeRef=678,701 CentralNode=1 Selected=0x18B8C0DE
-  DockNode      ID=0x00000002 Parent=0x8B93E3BD SizeRef=457,1001 Selected=0x371352B7
+    DockNode    ID=0x00000006 Parent=0x00000001 SizeRef=264,701 CentralNode=1 Selected=0x18B8C0DE
+  DockNode      ID=0x00000002 Parent=0x8B93E3BD SizeRef=830,1001 Selected=0x371352B7
 
