--- a/imgui.ini
+++ b/imgui.ini
@@ -15,49 +15,67 @@ Collapsed=0
 
 [Window][Hierarchy]
 Pos=0,19
-Size=182,440
+Size=341,440
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][Properties]
 Pos=0,461
-Size=182,259
+Size=341,259
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][Scene]
-Pos=184,19
-Size=264,701
+Pos=343,19
+Size=802,701
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Content Browser]
-Pos=450,19
-Size=830,701
+Pos=1147,19
+Size=133,701
 Collapsed=0
 DockId=0x00000002,0
 
-[Table][0x1DF0EC7D,12]
+[Window][Scene | Fps : 239]
+Pos=212,19
+Size=858,701
+Collapsed=0
+DockId=0x00000006,0
+
+[Window][Scene | Fps : 0]
+Pos=60,60
+Size=32,39
+Collapsed=0
+
+[Window][Scene | Fps : 98]
+Pos=60,60
+Size=32,39
+Collapsed=0
+
+[Window][Scene | Fps : 241]
+Pos=60,60
+Size=32,39
+Collapsed=0
+
+[Window][Scene | Fps : 237]
+Pos=60,60
+Size=32,39
+Collapsed=0
+
+[Table][0x1DF0EC7D,4]
 RefScale=13
 Column 0  Sort=0v
 Column 1 
 Column 2 
 Column 3 
-Column 4 
-Column 5 
-Column 6 
-Column 7 
-Column 8 
-Column 9 
-Column 10
-Column 11
 
 [Docking][Data]
 DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1280,701 Split=X
-  DockNode      ID=0x00000001 Parent=0x8B93E3BD SizeRef=448,1001 Split=X
-    DockNode    ID=0x00000005 Parent=0x00000001 SizeRef=182,701 Split=Y Selected=0xC89E3217
+  DockNode      ID=0x00000001 Parent=0x8B93E3BD SizeRef=1145,1001 Split=X
+    DockNode    ID=0x00000005 Parent=0x00000001 SizeRef=341,701 Split=Y Selected=0xC89E3217
       DockNode  ID=0x00000007 Parent=0x00000005 SizeRef=381,440 Selected=0x788BAA0D
       DockNode  ID=0x00000008 Parent=0x00000005 SizeRef=381,259 Selected=0xC89E3217
-    DockNode    ID=0x00000006 Parent=0x00000001 SizeRef=264,701 CentralNode=1 Selected=0x18B8C0DE
-  DockNode      ID=0x00000002 Parent=0x8B93E3BD SizeRef=830,1001 Selected=0x371352B7
+    DockNode    ID=0x00000006 Parent=0x00000001 SizeRef=802,701 CentralNode=1 Selected=0x18B8C0DE
+  DockNode      ID=0x00000002 Parent=0x8B93E3BD SizeRef=133,1001 Selected=0x371352B7
 
