--- a/imgui.ini
+++ b/imgui.ini
@@ -1,11 +1,11 @@
 [Window][BG]
 Pos=0,0
-Size=1280,720
+Size=1920,1020
 Collapsed=0
 
 [Window][DockSpaceViewport_11111111]
 Pos=0,19
-Size=1280,701
+Size=1920,1001
 Collapsed=0
 
 [Window][Debug##Default]
@@ -15,25 +15,25 @@ Collapsed=0
 
 [Window][Hierarchy]
 Pos=0,19
-Size=176,440
+Size=140,629
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][Properties]
-Pos=0,461
-Size=176,259
+Pos=0,650
+Size=140,370
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][Scene]
-Pos=178,19
-Size=854,701
+Pos=142,19
+Size=1046,1001
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][Content Browser]
-Pos=1034,19
-Size=246,701
+Pos=1190,19
+Size=730,1001
 Collapsed=0
 DockId=0x00000002,0
 
@@ -63,19 +63,26 @@ Pos=60,60
 Size=32,39
 Collapsed=0
 
-[Table][0x1DF0EC7D,4]
+[Table][0x1DF0EC7D,11]
 RefScale=13
 Column 0  Sort=0v
 Column 1 
 Column 2 
 Column 3 
+Column 4 
+Column 5 
+Column 6 
+Column 7 
+Column 8 
+Column 9 
+Column 10
 
 [Docking][Data]
-DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1280,701 Split=X
-  DockNode      ID=0x00000001 Parent=0x8B93E3BD SizeRef=1032,1001 Split=X
-    DockNode    ID=0x00000005 Parent=0x00000001 SizeRef=176,701 Split=Y Selected=0xC89E3217
+DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1920,1001 Split=X
+  DockNode      ID=0x00000001 Parent=0x8B93E3BD SizeRef=1188,1001 Split=X
+    DockNode    ID=0x00000005 Parent=0x00000001 SizeRef=140,701 Split=Y Selected=0xC89E3217
       DockNode  ID=0x00000007 Parent=0x00000005 SizeRef=381,440 Selected=0x788BAA0D
       DockNode  ID=0x00000008 Parent=0x00000005 SizeRef=381,259 Selected=0xC89E3217
-    DockNode    ID=0x00000006 Parent=0x00000001 SizeRef=854,701 CentralNode=1 Selected=0x18B8C0DE
-  DockNode      ID=0x00000002 Parent=0x8B93E3BD SizeRef=246,1001 Selected=0x371352B7
+    DockNode    ID=0x00000006 Parent=0x00000001 SizeRef=1046,701 CentralNode=1 Selected=0x18B8C0DE
+  DockNode      ID=0x00000002 Parent=0x8B93E3BD SizeRef=730,1001 Selected=0x371352B7
 
